fix the overflow x in mobile mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -26,6 +26,7 @@
  
 }
 .main{
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
 }
